--- a/scripts/package.json
+++ b/scripts/package.json
@@ -51,7 +51,7 @@
     "@types/lerna-alias": "^3.0.0",
     "@types/node": "^10.3.2",
     "@types/prompts": "^2.0.3",
-    "@types/puppeteer": "^1.11.1",
+    "@types/puppeteer": "1.12.3",
     "@types/webpack-dev-middleware": "^2.0.1",
     "@types/webpack-env": "1.15.1",
     "@types/webpack-hot-middleware": "^2.16.3",
@@ -96,7 +96,7 @@
     "gulp-util": "^3.0.8",
     "hard-source-webpack-plugin": "0.13.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
-    "ignore-not-found-export-webpack-plugin": "1.0.1",
+    "ignore-not-found-export-webpack-plugin": "^1.0.1",
     "jest": "~24.9.0",
     "jest-axe": "^3.2.0",
     "jest-cli": "~24.9.0",
@@ -105,7 +105,7 @@
     "jju": "^1.4.0",
     "json-loader": "^0.5.7",
     "json-stable-stringify-without-jsonify": "^1.0.1",
-    "just-scripts": "~0.34.0",
+    "just-scripts": "0.35.0",
     "lerna-alias": "^3.0.3-0",
     "license-webpack-plugin": "^2.1.1",
     "markdown-table": "^2.0.0",
@@ -132,7 +132,7 @@
     "sass-loader": "^6.0.6",
     "screener-runner": "^0.10.43",
     "semver": "^6.2.0",
-    "source-map-loader": "^0.2.1",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
     "through2": "^2.0.3",
     "tmp": "^0.0.33",
@@ -142,10 +142,10 @@
     "tsconfig-paths": "^3.7.0",
     "tslint": "^5.7.0",
     "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "3.7.5",
-    "webpack": "4.29.5",
-    "webpack-bundle-analyzer": "^3.0.4",
-    "webpack-cli": "3.2.3",
+    "typescript": "3.7.2",
+    "webpack": "4.35.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.6.2",
     "webpack-dev-server": "3.1.14",
     "webpack-hot-middleware": "^2.24.3",
