--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "publish:beachball": "beachball publish",
     "check-for-changed-files": "cd scripts && just-scripts check-for-modified-files",
     "preinstall": "node ./scripts/use-yarn-please.js",
+    "prelint": "yarn satisfied && yarn syncpack list-mismatches --prod --dev",
     "postinstall": "node ./scripts/postinstall.js",
     "prettier": "node scripts/prettier.js",
     "rebuild": "node ./scripts/invalidate-just-cache.js && npx lerna build --stream",
     "release:minor": "yarn workspace @uifabric/build just fluentui:publish:minor",
     "release:patch": "yarn workspace @uifabric/build just fluentui:publish:patch",
+    "satisfied": "satisfied --skip-invalid",
     "scrub": "node ./scripts/scrub.js",
     "start:legacy": "yarn workspace @uifabric/fabric-website-resources start",
     "start": "node scripts/start.js",
@@ -57,6 +59,8 @@
     "danger": "^6.0.5",
     "gulp": "^4.0.2",
     "sass-loader": "^6.0.6",
+    "satisfied": "^1.1.1",
+    "syncpack": "^4.5.4",
     "tsconfig-paths": "^3.7.0"
   },
   "license": "MIT",
@@ -95,7 +99,7 @@
     ]
   },
   "resolutions": {
-    "webpack": "4.29.5",
+    "webpack": "^4.35.0",
     "autoprefixer": "7.2.6",
     "copy-to-clipboard": "3.2.0"
   }
