--- a/packages/fluentui/digest/package.json
+++ b/packages/fluentui/digest/package.json
@@ -18,12 +18,12 @@
     "test": "just-scripts test"
   },
   "dependencies": {
-    "just-scripts": "^0.35.0",
+    "just-scripts": "0.35.0",
     "querystring": "^0.2.0",
-    "webpack": "^4.35.0"
+    "webpack": "4.35.0"
   },
   "devDependencies": {
-    "@types/webpack": "^4.1.4"
+    "@types/webpack": "4.4.0"
   },
   "publishConfig": {
     "access": "public"
