--- a/packages/fluentui/perf/package.json
+++ b/packages/fluentui/perf/package.json
@@ -7,7 +7,7 @@
     "@babel/polyfill": "^7.7.0",
     "@uifabric/build": "^7.0.0",
     "@fluentui/react": "^0.44.0",
-    "@types/webpack-env": "^1.14.1",
+    "@types/webpack-env": "1.15.1",
     "minimatch": "^3.0.4",
     "@types/react": "16.8.11"
   },
