--- a/packages/fluentui/playground/package.json
+++ b/packages/fluentui/playground/package.json
@@ -40,9 +40,9 @@
   "devDependencies": {
     "@uifabric/build": "^7.0.0",
     "@types/classnames": "^2.2.9",
-    "@types/enzyme": "^3.10.3",
-    "@types/enzyme-adapter-react-16": "1.0.5",
-    "@types/jest": "^24.0.19",
+    "@types/enzyme": "3.10.3",
+    "@types/enzyme-adapter-react-16": "1.0.3",
+    "@types/jest": "~24.9.0",
     "@types/node": "^10.3.2",
     "@types/react": "16.8.11",
     "@types/storybook__addon-info": "^5.2.1",
