--- a/packages/migration/package.json
+++ b/packages/migration/package.json
@@ -28,7 +28,7 @@
     "@types/jest": "~24.9.0",
     "@types/glob": "^7.1.1",
     "@types/mock-fs": "3.6.30",
-    "@types/node": "^10.0.0",
+    "@types/node": "^10.3.2",
     "@types/semver": "^5.5.0",
     "@uifabric/tslint-rules": "^7.0.6",
     "glob": "^7.1.2",
@@ -36,9 +36,9 @@
     "@uifabric/build": "^7.0.0"
   },
   "dependencies": {
-    "semver": "^5.6.0",
+    "semver": "^6.2.0",
     "tslib": "^1.10.0",
-    "riceburn": "1.3.1",
-    "typescript": "3.7.5"
+    "riceburn": "^1.3.1",
+    "typescript": "3.7.2"
   }
 }
