Fluent: Activate approved dependency script (#11995)
* Activate script.

* Fix pipeline.

* Update yarn.lock.

* Disable perf script.

* Update yarn.lock one more time.

* Fix pipeline message.

* Add pipeline display name.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,6 +74,16 @@ jobs:
       - template: azure-pipelines.tools.yml
 
       - script: |
+          if [ $BUILD_REASON == "PullRequest" ]; then
+            yarn danger ci
+          else
+            echo "Skipping Danger JS because BUILD_REASON ${BUILD_REASON} != PullRequest"
+          fi
+        displayName: danger
+        env:
+          DANGER_GITHUB_API_TOKEN: $(DANGER_GITHUB_API_TOKEN)
+
+      - script: |
           yarn test
         displayName: test
 
