--- a/packages/react-focus/package.json
+++ b/packages/react-focus/package.json
@@ -22,6 +22,7 @@
     "lint": "just-scripts lint",
     "start": "just-scripts dev:storybook",
     "start-test": "just-scripts jest-watch",
+    "test": "just-scripts test",
     "update-api": "just-scripts update-api",
     "update-snapshots": "just-scripts jest -u"
   },
@@ -48,6 +49,7 @@
   "dependencies": {
     "@uifabric/merge-styles": "^7.8.6",
     "@uifabric/set-version": "^7.0.5",
+    "@uifabric/styling": "^7.10.11",
     "@uifabric/utilities": "^7.12.2",
     "tslib": "^1.10.0"
   },
