Prettier script updates (#12002)

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "node ./scripts/lint-staged/tslint",
         "git add"
       ],
-      "*.{js,jsx,json,scss,html,md}": [
+      "*.{js,jsx,json,scss,css,html,md,yml}": [
         "node ./scripts/lint-staged/prettier",
         "node ./scripts/lint-staged/auto-convert-change-files",
         "git add"
