--- a/azure-pipelines.perf-test.yml
+++ b/azure-pipelines.perf-test.yml
@@ -12,6 +12,11 @@ steps:
   # No need for checkout since we're using build artifacts.
   - checkout: none
 
+  # TODO: why is this different from main pipeline? is this really getting the correct artifacts?
+  # I think this could be grabbing the wrong (most recent PR) artifacts rather than the one it's associated with
+  # This run is for PR 20200219.5 build #53232 but is grabbing artifacts from 2020219.6 build #53235
+  # https://uifabric.visualstudio.com/fabricpublic/_build/results?buildId=53238&view=logs&j=12f1170f-54f2-53f3-20dd-22fc7dff55f9&t=559759ef-66f4-5335-a959-132505aae30a
+  # Last PR Build: https://uifabric.visualstudio.com/fabricpublic/_build/results?buildId=53232&view=logs&jobId=92058b04-f16a-5035-546c-cae3ad5e2f5f&j=ca395085-040a-526b-2ce8-bdc85f692774&t=25a453a0-e716-5e6e-0bee-a24e8e541880
   - template: azure-pipelines.artifacts.yml
     parameters:
       artifact: $(artifact)
@@ -19,10 +24,28 @@ steps:
 
   - template: azure-pipelines.tools.yml
 
+  # TODO: include perf:test:base (if here make sure this pipeline triggers on master builds)
+  # Fluent perf-test must run before Fabric perf-test until they are consolidated.
+  - script: |
+      yarn perf:test
+    workingDirectory: packages/fluentui/perf-test
+    displayName: Perf Test (Fluent)
+    env:
+      STATS_URI: $(STATS_URI)
+
   - script: |
       yarn just perf-test
     workingDirectory: apps/perf-test
     displayName: Perf Test
+
+  - task: AzureUpload@1
+    displayName: Upload Perf Test Result to PR deploy site (Fluent)
+    inputs:
+      SourcePath: 'packages/fluentui/perf-test/dist'
+      azureSubscription: 'UI Fabric (bac044cf-49e1-4843-8dda-1ce9662606c8)'
+      storage: fabricweb
+      ContainerName: '$web'
+      BlobPrefix: 'pr-deploy-site/$(Build.SourceBranch)/perf-test/fluentui'
 
   - task: AzureUpload@1
     displayName: Upload Perf Test Result to PR deploy site
