Adding support for running FUI screener tests (#12009)
* Adding support for running FUI screener tests

* Screener test to see if the accepted test cases are ADDITIVE

* making the screener process run in serial because we cannot parallelize with screener.io

* try build again with different build number for screener

* set it back to master to show what happens if these are called one after another

* build with cache to improve speeds

* make jobs actually fail if screener is reporting failure!

* changing the projectRepo name

* don't fail on screener failures here, but rather, do it from screener's status check

* get rid of cache since it doesn't seem to work

* get rid of the frozen lockfile argument

* clear gulp cache to see if that fixes the borken state

* get rid of gulp-cache for now

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -135,11 +135,15 @@ jobs:
 
   - job: Screener
     dependsOn: Build
-    pool:
-      vmImage: 'Ubuntu 18.04'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
+
+      - task: DeleteFiles@1
+        inputs:
+          SourceFolder: /tmp/gulp-cache
+          Contents: '**/*'
+        condition: always()
 
       - template: azure-pipelines.artifacts.yml
         parameters:
@@ -153,6 +157,14 @@ jobs:
           git config --global user.name "Fabric Tactical"
           yarn vrtest -- --debug
         displayName: run VR Test
+        env:
+          SCREENER_API_KEY: $(screener.key)
+
+      - script: |
+          git config --global user.email "fabrictactical@microsoft.com"
+          git config --global user.name "Fabric Tactical"
+          yarn test:fluentui:visual
+        displayName: run FUI VR Test
         env:
           SCREENER_API_KEY: $(screener.key)
 
