--- a/azure-pipelines.release-fluentui.yml
+++ b/azure-pipelines.release-fluentui.yml
@@ -31,8 +31,8 @@ steps:
     displayName: yarn build
 
   - script: |
-      PRODUCTION=true yarn build:fluentuidocs
-    displayName: yarn build:fluentuidocs
+      PRODUCTION=true yarn build:fluentui:docs
+    displayName: yarn build:fluentui:docs
 
   - task: AzureUpload@1
     displayName: Upload docs site
