--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "a11ytest": "cd apps && cd a11y-tests && npm run test",
     "build": "lerna run build --stream",
-    "build:fluentuidocs": "gulp build:docs",
+    "build:fluentui:docs": "gulp build:docs",
     "build:prod": "lerna run build --stream -- --production",
     "buildci": "yarn build && yarn test && yarn lint && yarn bundle",
     "buildci:prod": "yarn build:prod && yarn test && yarn lint && yarn bundle:prod",
@@ -46,6 +46,7 @@
     "start": "node scripts/start.js",
     "start-exp": "yarn workspace @uifabric/experiments start",
     "test": "lerna run test --stream",
+    "test:fluentui:visual": "gulp screener",
     "update-api": "cd packages/office-ui-fabric-react && npm run update-api",
     "update-snapshots": "lerna run update-snapshots --stream",
     "update-a11y": "cd apps/a11y-tests && npm run update-snapshots",
