--- a/packages/fluentui/docs/package.json
+++ b/packages/fluentui/docs/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^10.3.2",
     "@types/react-custom-scrollbars": "^4.0.5",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-virtualized": "^9.21.8",
     "@types/webpack-env": "1.15.1",
     "gulp": "^4.0.2",
     "@types/react": "16.8.11"
@@ -36,6 +37,7 @@
     "access": "public"
   },
   "scripts": {
+    "build": "gulp build:docs",
     "start": "gulp docs"
   }
 }
