Fluent: Update code via import (again) (#12036)
* Update fluentui code by running fluent-import script.

* Remove file that changes on stats collection and should be gitignored.

* updates the fluent-import to the right path for tslint.json extensions

* lock jest types to 24

* separate fluentui tslint

* run prettier on import

* ignore bundleStats

* more import tslint fixes

* types and lint

* get rid of that weird import from Dropdown-test.tsx

* adding the jest-dom typing again

* fixing lint issues

Co-authored-by: Kenneth Chau <kenotron@users.noreply.github.com>
Co-authored-by: Elizabeth Craig <ecraig12345@gmail.com>

--- a/packages/fluentui/docs-components/package.json
+++ b/packages/fluentui/docs-components/package.json
@@ -30,7 +30,11 @@
   "repository": "microsoft/fluent-ui-react.git",
   "scripts": {
     "build": "gulp bundle:package:no-umd",
-    "clean": "gulp bundle:package:clean"
+    "clean": "gulp bundle:package:clean",
+    "lint": "yarn lint:eslint && yarn lint:old",
+    "lint:eslint": "eslint --ext .js,.ts,.tsx .",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:old --fix",
+    "lint:old": "tslint -t stylish -p ."
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
