--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 packages/fluentui/docs/src/componentInfo
 packages/fluentui/docs/src/componentMenu.json
 packages/fluentui/docs/src/behaviorMenu.json
+packages/fluentui/docs/src/bundleStats.json
 packages/fluentui/docs/src/currentBundleStats.json
 packages/fluentui/docs/src/exampleMenus
 packages/fluentui/docs/src/exampleSources
