--- a/packages/fluentui/code-sandbox/package.json
+++ b/packages/fluentui/code-sandbox/package.json
@@ -19,7 +19,7 @@
   "main": "dist/commonjs/index.js",
   "module": "dist/es/index.js",
   "peerDependencies": {
-    "@fluentui/react": "0.44.0",
+    "@fluentui/react": "*",
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
   },
@@ -29,7 +29,11 @@
   "repository": "microsoft/fluent-ui-react.git",
   "scripts": {
     "build": "gulp bundle:package:no-umd",
-    "clean": "gulp bundle:package:clean"
+    "clean": "gulp bundle:package:clean",
+    "lint": "yarn lint:eslint && yarn lint:old",
+    "lint:eslint": "eslint --ext .js,.ts,.tsx .",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:old --fix",
+    "lint:old": "tslint -t stylish -p ."
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
