--- a/packages/fluentui/perf/package.json
+++ b/packages/fluentui/perf/package.json
@@ -13,5 +13,11 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "scripts": {
+    "lint": "yarn lint:eslint && yarn lint:old",
+    "lint:eslint": "eslint --ext .js,.ts,.tsx .",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:old --fix",
+    "lint:old": "tslint -t stylish -p ."
   }
 }
