-fix(build): release public docsite from CI (#12048)

--- a/azure-pipelines.release-fluentui.yml
+++ b/azure-pipelines.release-fluentui.yml
@@ -31,7 +31,7 @@ steps:
     displayName: yarn build
 
   - script: |
-      PRODUCTION=true yarn build:fluentui:docs
+      NODE_ENV=production yarn build:fluentui:docs
     displayName: yarn build:fluentui:docs
 
   - task: AzureUpload@1
