Fluent: Add missing tests to CI (#12038)
* Add Fluent CI test commands and pipeline execution.

* Fix pipeline name.

* Fix e2e tests.

* Fix pipeline name.

* update test-projects script to use 'scripts' as dev tool folder

* Temporarily disable test:projects:cra-ts.

* Revert and fix test-projects script.

* Fix one more instance of build.

* Try yarn schema.

* Try standard agent for troubleshooting.

* remove build step

* Undo manual edit to fluentui package file.

* Undo default build agent change.

Co-authored-by: Kenneth Chau <kenotron@users.noreply.github.com>
Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,6 +74,37 @@ jobs:
       - template: azure-pipelines.tools.yml
 
       - script: |
+          yarn test
+        displayName: test
+
+      - script: |
+          yarn lint
+        displayName: lint
+
+      - script: |
+          yarn check-for-changed-files
+        displayName: check for changed files
+
+      - task: DeleteFiles@1
+        inputs:
+          SourceFolder: $(Build.SourcesDirectory)
+          Contents: '**/*'
+        condition: always()
+
+  - job: ValidateFluent
+    dependsOn: Build
+    steps:
+      # No need for checkout since we're using build artifacts.
+      - checkout: none
+
+      - template: azure-pipelines.artifacts.yml
+        parameters:
+          artifact: Build-PR-$(Build.BuildNumber)
+          buildId: $(Build.BuildId)
+
+      - template: azure-pipelines.tools.yml
+
+      - script: |
           if [ $BUILD_REASON == "PullRequest" ]; then
             yarn danger ci
           else
@@ -84,12 +115,16 @@ jobs:
           DANGER_GITHUB_API_TOKEN: $(DANGER_GITHUB_API_TOKEN)
 
       - script: |
-          yarn test
-        displayName: test
+          yarn test:fluentui:e2e
+        displayName: E2E Tests
 
       - script: |
-          yarn lint
-        displayName: lint
+          yarn test:fluentui:projects
+        displayName: Project Tests
+
+      - script: |
+          yarn test:fluentui:circulars
+        displayName: Circular Dependencies Tests
 
       - script: |
           yarn check-for-changed-files
