--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "start": "node scripts/start.js",
     "start-exp": "yarn workspace @uifabric/experiments start",
     "test": "lerna run test --stream",
+    "test:fluentui:circulars": "gulp test:circulars:run",
+    "test:fluentui:e2e": "gulp test:e2e",
     "test:fluentui:visual": "gulp screener",
+    "test:fluentui:projects": "gulp test:projects",
     "update-api": "cd packages/office-ui-fabric-react && npm run update-api",
     "update-snapshots": "lerna run update-snapshots --stream",
     "update-a11y": "cd apps/a11y-tests && npm run update-snapshots",
