--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -33,7 +33,7 @@ azure-pipelines.*.yml @ecraig12345 @kenotron @JasonGore
 sizeauditor.json @aftab-hassan
 
 #### Fluent UI
-packages/fluentui/ @JasonGore @kenotron
+packages/fluentui/ @davezuko @kuzhelov @layershifter @levithomason @miroslavstastny @mnajdova @kenotron @jdhuntington @ecraig12345 @dzearing @jasongore
 
 #### Deprecated API Files
 *.api.ts @natalieethell
@@ -75,140 +75,136 @@ common/_semanticSlots.scss  @phkuo
 common/_themeOverrides.scss @phkuo
 common/_common.scss @phkuo
 
-### Utilities
-dateMath/     @OfficeDev/uifabric-calendar @lorejoh
-dateValues/   @OfficeDev/uifabric-calendar @lorejoh
-
 ## Components
-Accordion/ @JasonGore
-ActivityItem/ @jdhuntington
-Announced/ @natalieethell
-Breadcrumb/ @jdhuntington
-Button/ @khmakoto
-Calendar/ @OfficeDev/uifabric-calendar @lorejoh
-Callout/ @joschect
-react-cards/Card/  @khmakoto
-Check/ @KevinTCoughlin
-Checkbox/ @cliffkoh
-ChoiceGroup/ @ecraig12345
-Coachmark/ @leddie24
-CollapsibleSection/ @JasonGore
-ColorPicker/ @ecraig12345
-ComboBox/ @joschect
-CommandBar/ @micahgodbolt @joschect
-ContextualMenu/ @joschect
-DatePicker/ @OfficeDev/uifabric-calendar @lorejoh
-DetailsList/ @KevinTCoughlin
-Dialog/ @JasonGore
-DocumentCard/ @yiminwu
-Dropdown/ @joschect
-Fabric/ @dzearing
-Facepile/ @markionium @mtennoe
-FolderCover/ @ThomasMichon @bigbadcapers
-FocusTrapZone/ @JasonGore
-office-ui-fabric-react/src/components/FocusZone/ @JasonGore
-react-focus/src/components/FocusZone/ @khmakoto
-GroupedList/  @aditima @KevinTCoughlin
-HoverCard/   @atneik @Jahnp @Vitalius1
-Icon/ @dzearing
-Image/ @dzearing
-Label/ @cliffkoh
-Layer/  @ThomasMichon @JasonGore
-Link/ @khmakoto
-List/ @KevinTCoughlin
-MarqueeSelection/ @dzearing
-MessageBar/ @ecraig12345
-Modal/ @JasonGore
-office-ui-fabric-react/src/components/Nav/ @jdhuntington
-OverflowSet/ @micahgodbolt
-Overlay/ @aneeshack4
-Pagination/ @caradong
-Panel/ @aneeshack4
-Persona/ @markionium @mtennoe
-PersonaCoin/ @mtennoe @markionium
-Persona/PersonaConsts.tsx @mtennoe
-pickers/  @joschect
-Pivot/ @jdhuntington
-Popup/ @JasonGore
-ProgressIndicator/ @aneeshack4
-Rating/ @jdhuntington
-ResizeGroup/ @micahgodbolt
-SearchBox/ @ecraig12345
-Separator/ @natalieethell
-Shimmer/ @Vitalius1 @atneik
-Signals/ @ThomasMichon
-Slider/ @aneeshack4
-SpinButton/ @aneeshack4
-Spinner/ @aneeshack4
-Stack/  @khmakoto
-SwatchColorPicker/ @ecraig12345
-TeachingBubble/ @micahgodbolt
-Text/ @natalieethell
-TextField/ @ecraig12345
-Theme/ @JasonGore
-Tile/ @ThomasMichon
-TileList/ @ThomasMichon
-office-ui-fabric-react/src/components/Toggle/  @phkuo
-experiments/src/components/Toggle/  @khmakoto @JasonGore
-Tooltip/ @micahgodbolt
+packages/office-ui-fabric-react/src/components/Accordion/ @JasonGore
+packages/office-ui-fabric-react/src/components/ActivityItem/ @jdhuntington
+packages/office-ui-fabric-react/src/components/Announced/ @natalieethell
+packages/office-ui-fabric-react/src/components/Breadcrumb/ @jdhuntington
+packages/office-ui-fabric-react/src/components/Button/ @khmakoto
+packages/office-ui-fabric-react/src/components/Calendar/ @OfficeDev/uifabric-calendar @lorejoh
+packages/office-ui-fabric-react/src/components/Callout/ @joschect
+packages/office-ui-fabric-react/src/components/react-cards/Card/  @khmakoto
+packages/office-ui-fabric-react/src/components/Check/ @KevinTCoughlin
+packages/office-ui-fabric-react/src/components/Checkbox/ @cliffkoh
+packages/office-ui-fabric-react/src/components/ChoiceGroup/ @ecraig12345
+packages/office-ui-fabric-react/src/components/Coachmark/ @leddie24
+packages/office-ui-fabric-react/src/components/CollapsibleSection/ @JasonGore
+packages/office-ui-fabric-react/src/components/ColorPicker/ @ecraig12345
+packages/office-ui-fabric-react/src/components/ComboBox/ @joschect
+packages/office-ui-fabric-react/src/components/CommandBar/ @micahgodbolt @joschect
+packages/office-ui-fabric-react/src/components/ContextualMenu/ @joschect
+packages/office-ui-fabric-react/src/components/DatePicker/ @OfficeDev/uifabric-calendar @lorejoh
+packages/office-ui-fabric-react/src/components/DetailsList/ @KevinTCoughlin
+packages/office-ui-fabric-react/src/components/Dialog/ @JasonGore
+packages/office-ui-fabric-react/src/components/DocumentCard/ @yiminwu
+packages/office-ui-fabric-react/src/components/Dropdown/ @joschect
+packages/office-ui-fabric-react/src/components/Fabric/ @dzearing
+packages/office-ui-fabric-react/src/components/Facepile/ @markionium @mtennoe
+packages/office-ui-fabric-react/src/components/FolderCover/ @ThomasMichon @bigbadcapers
+packages/office-ui-fabric-react/src/components/FocusTrapZone/ @JasonGore
+packages/office-ui-fabric-react/src/components/office-ui-fabric-react/src/components/FocusZone/ @JasonGore
+packages/office-ui-fabric-react/src/components/react-focus/src/components/FocusZone/ @khmakoto
+packages/office-ui-fabric-react/src/components/GroupedList/  @aditima @KevinTCoughlin
+packages/office-ui-fabric-react/src/components/HoverCard/   @atneik @Jahnp @Vitalius1
+packages/office-ui-fabric-react/src/components/Icon/ @dzearing
+packages/office-ui-fabric-react/src/components/Image/ @dzearing
+packages/office-ui-fabric-react/src/components/Label/ @cliffkoh
+packages/office-ui-fabric-react/src/components/Layer/  @ThomasMichon @JasonGore
+packages/office-ui-fabric-react/src/components/Link/ @khmakoto
+packages/office-ui-fabric-react/src/components/List/ @KevinTCoughlin
+packages/office-ui-fabric-react/src/components/MarqueeSelection/ @dzearing
+packages/office-ui-fabric-react/src/components/MessageBar/ @ecraig12345
+packages/office-ui-fabric-react/src/components/Modal/ @JasonGore
+packages/office-ui-fabric-react/src/components/office-ui-fabric-react/src/components/Nav/ @jdhuntington
+packages/office-ui-fabric-react/src/components/OverflowSet/ @micahgodbolt
+packages/office-ui-fabric-react/src/components/Overlay/ @aneeshack4
+packages/office-ui-fabric-react/src/components/Pagination/ @caradong
+packages/office-ui-fabric-react/src/components/Panel/ @aneeshack4
+packages/office-ui-fabric-react/src/components/Persona/ @markionium @mtennoe
+packages/office-ui-fabric-react/src/components/PersonaCoin/ @mtennoe @markionium
+packages/office-ui-fabric-react/src/components/Persona/PersonaConsts.tsx @mtennoe
+packages/office-ui-fabric-react/src/components/pickers/  @joschect
+packages/office-ui-fabric-react/src/components/Pivot/ @jdhuntington
+packages/office-ui-fabric-react/src/components/Popup/ @JasonGore
+packages/office-ui-fabric-react/src/components/ProgressIndicator/ @aneeshack4
+packages/office-ui-fabric-react/src/components/Rating/ @jdhuntington
+packages/office-ui-fabric-react/src/components/ResizeGroup/ @micahgodbolt
+packages/office-ui-fabric-react/src/components/SearchBox/ @ecraig12345
+packages/office-ui-fabric-react/src/components/Separator/ @natalieethell
+packages/office-ui-fabric-react/src/components/Shimmer/ @Vitalius1 @atneik
+packages/office-ui-fabric-react/src/components/Signals/ @ThomasMichon
+packages/office-ui-fabric-react/src/components/Slider/ @aneeshack4
+packages/office-ui-fabric-react/src/components/SpinButton/ @aneeshack4
+packages/office-ui-fabric-react/src/components/Spinner/ @aneeshack4
+packages/office-ui-fabric-react/src/components/Stack/  @khmakoto
+packages/office-ui-fabric-react/src/components/SwatchColorPicker/ @ecraig12345
+packages/office-ui-fabric-react/src/components/TeachingBubble/ @micahgodbolt
+packages/office-ui-fabric-react/src/components/Text/ @natalieethell
+packages/office-ui-fabric-react/src/components/TextField/ @ecraig12345
+packages/office-ui-fabric-react/src/components/Theme/ @JasonGore
+packages/office-ui-fabric-react/src/components/Tile/ @ThomasMichon
+packages/office-ui-fabric-react/src/components/TileList/ @ThomasMichon
+packages/office-ui-fabric-react/src/components/Toggle/  @phkuo
+packages/office-ui-fabric-react/src/components/Tooltip/ @micahgodbolt
+packages/experiments/src/components/Toggle/  @khmakoto @JasonGore
 
 ## Docs
-# ActivityItem/docs/
-Announced/docs/ @natalieethell
-# Breadcrumb/docs/
-Button/docs/  @khmakoto
-Calendar/docs/   @OfficeDev/uifabric-calendar @lorejoh
-Callout/docs/  @joschect
-react-cards/Card/docs/  @khmakoto
-# Check/docs/
-# Checkbox/docs/
-ChoiceGroup/docs/   @srideshpande
-# ColorPicker/docs/
-# ComboBox/docs/
-CommandBar/docs/   @micahgodbolt
-ContextualMenu/docs/  @joschect
-DatePicker/docs/   @OfficeDev/uifabric-calendar @lorejoh
-DetailsList/docs/ @KevinTCoughlin
-# Dialog/docs/
-DocumentCard/docs/ @yiminwu
-# Dropdown/docs/
-# Fabric/docs/
-# Facepile/docs/
-# FocusTrapZone/docs/
-# FocusZone/docs/
-GroupedList/docs/  @aditima @KevinTCoughlin
-HoverCard/docs/   @atneik @Jahnp @Vitalius1
-# Icon/docs/
-# Image/docs/
-# Label/docs/
-Layer/docs/  @ThomasMichon
-Link/docs/  @khmakoto
-List/docs/ @KevinTCoughlin
-# MarqueeSelection/docs/
-# MessageBar/docs/
-# Modal/docs/
-# Nav/docs/
-OverflowSet/docs/  @micahgodbolt
-# Overlay/docs/
-# Panel/docs/
-Persona/docs/ @markionium @mtennoe
-pickers/docs/  @joschect
-# Pivot/docs/
-# Popup/docs/
-# ProgressIndicator/docs/
-# Rating/docs/
-ResizeGroup/docs/  @micahgodbolt
-# SearchBox/docs/
-Separator/docs/ @natalieethell
-Shimmer/docs/ @Vitalius1 @atneik
-# Slider/docs/
-# SpinButton/docs/
-# Spinner/docs/
-Stack/docs/  @khmakoto
-# SwatchColorPicker/docs/
-TeachingBubble/docs/   @micahgodbolt
-Text/docs/ @natalieethell
-# TextField/docs/
-# Theme/docs/
-office-ui-fabric-react/src/components/Toggle/docs/  @phkuo
-Tooltip/docs/  @micahgodbolt
+# packages/office-ui-fabric-react/src/components/ActivityItem/docs/
+packages/office-ui-fabric-react/src/components/Announced/docs/ @natalieethell
+# packages/office-ui-fabric-react/src/components/Breadcrumb/docs/
+packages/office-ui-fabric-react/src/components/Button/docs/  @khmakoto
+packages/office-ui-fabric-react/src/components/Calendar/docs/   @OfficeDev/uifabric-calendar @lorejoh
+packages/office-ui-fabric-react/src/components/Callout/docs/  @joschect
+packages/office-ui-fabric-react/src/components/react-cards/Card/docs/  @khmakoto
+# packages/office-ui-fabric-react/src/components/Check/docs/
+# packages/office-ui-fabric-react/src/components/Checkbox/docs/
+packages/office-ui-fabric-react/src/components/ChoiceGroup/docs/   @srideshpande
+# packages/office-ui-fabric-react/src/components/ColorPicker/docs/
+# packages/office-ui-fabric-react/src/components/ComboBox/docs/
+packages/office-ui-fabric-react/src/components/CommandBar/docs/   @micahgodbolt
+packages/office-ui-fabric-react/src/components/ContextualMenu/docs/  @joschect
+packages/office-ui-fabric-react/src/components/DatePicker/docs/   @OfficeDev/uifabric-calendar @lorejoh
+packages/office-ui-fabric-react/src/components/DetailsList/docs/ @KevinTCoughlin
+# packages/office-ui-fabric-react/src/components/Dialog/docs/
+packages/office-ui-fabric-react/src/components/DocumentCard/docs/ @yiminwu
+# packages/office-ui-fabric-react/src/components/Dropdown/docs/
+# packages/office-ui-fabric-react/src/components/Fabric/docs/
+# packages/office-ui-fabric-react/src/components/Facepile/docs/
+# packages/office-ui-fabric-react/src/components/FocusTrapZone/docs/
+# packages/office-ui-fabric-react/src/components/FocusZone/docs/
+packages/office-ui-fabric-react/src/components/GroupedList/docs/  @aditima @KevinTCoughlin
+packages/office-ui-fabric-react/src/components/HoverCard/docs/   @atneik @Jahnp @Vitalius1
+# packages/office-ui-fabric-react/src/components/Icon/docs/
+# packages/office-ui-fabric-react/src/components/Image/docs/
+# packages/office-ui-fabric-react/src/components/Label/docs/
+packages/office-ui-fabric-react/src/components/Layer/docs/  @ThomasMichon
+packages/office-ui-fabric-react/src/components/Link/docs/  @khmakoto
+packages/office-ui-fabric-react/src/components/List/docs/ @KevinTCoughlin
+# packages/office-ui-fabric-react/src/components/MarqueeSelection/docs/
+# packages/office-ui-fabric-react/src/components/MessageBar/docs/
+# packages/office-ui-fabric-react/src/components/Modal/docs/
+# packages/office-ui-fabric-react/src/components/Nav/docs/
+packages/office-ui-fabric-react/src/components/OverflowSet/docs/  @micahgodbolt
+# packages/office-ui-fabric-react/src/components/Overlay/docs/
+# packages/office-ui-fabric-react/src/components/Panel/docs/
+packages/office-ui-fabric-react/src/components/Persona/docs/ @markionium @mtennoe
+packages/office-ui-fabric-react/src/components/pickers/docs/  @joschect
+# packages/office-ui-fabric-react/src/components/Pivot/docs/
+# packages/office-ui-fabric-react/src/components/Popup/docs/
+# packages/office-ui-fabric-react/src/components/ProgressIndicator/docs/
+# packages/office-ui-fabric-react/src/components/Rating/docs/
+packages/office-ui-fabric-react/src/components/ResizeGroup/docs/  @micahgodbolt
+# packages/office-ui-fabric-react/src/components/SearchBox/docs/
+packages/office-ui-fabric-react/src/components/Separator/docs/ @natalieethell
+packages/office-ui-fabric-react/src/components/Shimmer/docs/ @Vitalius1 @atneik
+# packages/office-ui-fabric-react/src/components/Slider/docs/
+# packages/office-ui-fabric-react/src/components/SpinButton/docs/
+# packages/office-ui-fabric-react/src/components/Spinner/docs/
+packages/office-ui-fabric-react/src/components/Stack/docs/  @khmakoto
+# packages/office-ui-fabric-react/src/components/SwatchColorPicker/docs/
+packages/office-ui-fabric-react/src/components/TeachingBubble/docs/   @micahgodbolt
+packages/office-ui-fabric-react/src/components/Text/docs/ @natalieethell
+# packages/office-ui-fabric-react/src/components/TextField/docs/
+# packages/office-ui-fabric-react/src/components/Theme/docs/
+packages/office-ui-fabric-react/src/components/Toggle/docs/  @phkuo
+packages/office-ui-fabric-react/src/components/Tooltip/docs/  @micahgodbolt
