--- a/scripts/package.json
+++ b/scripts/package.json
@@ -45,10 +45,10 @@
     "@types/gulp-cache": "^0.4.4",
     "@types/gulp-remember": "^0.0.31",
     "@types/gulp-util": "^3.0.34",
-    "@types/lodash": "^4.14.149",
     "@types/jest": "~24.9.0",
     "@types/jest-axe": "^3.2.1",
     "@types/lerna-alias": "^3.0.0",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^10.3.2",
     "@types/prompts": "^2.0.3",
     "@types/puppeteer": "1.12.3",
@@ -93,6 +93,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-remember": "^1.0.1",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-util": "^3.0.8",
     "hard-source-webpack-plugin": "0.13.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
@@ -142,9 +143,9 @@
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.7.0",
     "tslint": "^5.7.0",
-    "tslint-microsoft-contrib": "^5.0.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
+    "tslint-microsoft-contrib": "^5.0.1",
     "typescript": "3.7.2",
     "webpack": "4.35.0",
     "webpack-bundle-analyzer": "^3.6.0",
