Fluent: Final import (#12068)
* Final fluent import.

* fix approvedPackages.ts

* Disable fluent-import script.

Co-authored-by: Oleksandr Fediashov <alexander.mcgarret@gmail.com>

--- a/packages/fluentui/react/package.json
+++ b/packages/fluentui/react/package.json
@@ -16,13 +16,13 @@
     "@fluentui/styles": "^0.44.0",
     "classnames": "^2.2.6",
     "downshift": "3.2.14",
-    "fast-memoize": "^2.5.1",
     "fela": "^10.6.1",
     "fela-plugin-embedded": "^10.6.1",
     "fela-plugin-fallback-value": "^10.6.1",
     "fela-plugin-placeholder-prefixer": "^10.6.1",
     "fela-plugin-prefixer": "^10.6.1",
     "fela-plugin-rtl": "^10.6.1",
+    "inline-style-expand-shorthand": "^1.2.0",
     "keyboard-key": "1.0.1",
     "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
