--- a/packages/fluentui/react-theming/package.json
+++ b/packages/fluentui/react-theming/package.json
@@ -2,14 +2,11 @@
   "name": "@fluentui/react-theming",
   "version": "0.44.0",
   "description": "> TODO: description",
-  "homepage": "https://github.com/microsoft/fluent-ui#readme",
+  "homepage": "https://github.com/OfficeDev/office-ui-fabric-react",
   "bugs": {
-    "url": "https://github.com/microsoft/fluent-ui/issues"
+    "url": "https://github.com/OfficeDev/office-ui-fabric-react/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/microsoft/fluent-ui.git"
-  },
+  "repository": "OfficeDev/office-ui-fabric-react.git",
   "license": "MIT",
   "files": [
     "lib"
