--- a/packages/fluentui/react/package.json
+++ b/packages/fluentui/react/package.json
@@ -3,7 +3,7 @@
   "description": "A themable React component library.",
   "version": "0.44.0",
   "author": "Levi Thomason <me@levithomason.com>",
-  "bugs": "https://github.com/microsoft/fluent-ui-react/issues",
+  "bugs": "https://github.com/OfficeDev/office-ui-fabric-react/issues",
   "dependencies": {
     "@babel/runtime": "^7.7.6",
     "@fluentui/accessibility": "^0.44.0",
@@ -45,7 +45,7 @@
   "files": [
     "dist"
   ],
-  "homepage": "https://github.com/microsoft/fluent-ui-react#readme",
+  "homepage": "https://github.com/OfficeDev/office-ui-fabric-react/tree/master/packages/fluentui/react",
   "jsnext:main": "dist/es/index.js",
   "license": "MIT",
   "main": "dist/commonjs/index.js",
@@ -57,7 +57,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "repository": "microsoft/fluent-ui-react.git",
+  "repository": "OfficeDev/office-ui-fabric-react.git",
   "scripts": {
     "build": "gulp bundle:package",
     "clean": "gulp bundle:package:clean",
