Remove unneeded update-snapshots tasks (#12087)

--- a/packages/fluentui/playground/package.json
+++ b/packages/fluentui/playground/package.json
@@ -30,8 +30,7 @@
     "perf": "just-scripts e2e:perf",
     "start": "just-scripts storybook:start",
     "start-test": "just-scripts test:watch",
-    "test": "just-scripts test",
-    "update-snapshots": "just-scripts jest:snapshots"
+    "test": "just-scripts test"
   },
   "dependencies": {
     "@fluentui/react-theming": "^0.44.0",
