--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "postinstall": "node ./scripts/postinstall.js",
     "prettier": "node scripts/prettier.js",
     "rebuild": "node ./scripts/invalidate-just-cache.js && npx lerna build --stream",
-    "release:minor": "yarn workspace @uifabric/build just fluentui:publish:minor",
-    "release:patch": "yarn workspace @uifabric/build just fluentui:publish:patch",
+    "release:fluentui:minor": "yarn workspace @uifabric/build just fluentui:publish:minor",
+    "release:fluentui:patch": "yarn workspace @uifabric/build just fluentui:publish:patch",
     "satisfied": "satisfied --skip-invalid",
     "scrub": "node ./scripts/scrub.js",
     "start:legacy": "yarn workspace @uifabric/fabric-website-resources start",
