--- a/packages/fluentui/e2e/package.json
+++ b/packages/fluentui/e2e/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@fluentui/e2e",
-  "version": "0.45.0",
+  "version": "0.44.0",
   "private": true,
   "license": "MIT",
   "devDependencies": {
-    "@fluentui/react": "^0.45.0",
-    "@types/puppeteer": "1.12.3",
-    "@types/react": "16.8.11",
-    "@types/react-router-dom": "^4.3.4",
     "@uifabric/build": "^7.0.0",
+    "@fluentui/react": "^0.44.0",
+    "@types/puppeteer": "1.12.3",
+    "@types/react-router-dom": "^4.3.4",
     "puppeteer": "^1.13.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "@types/react": "16.8.11"
   },
   "publishConfig": {
     "access": "public"
