--- a/packages/fluentui/perf/package.json
+++ b/packages/fluentui/perf/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@fluentui/perf",
-  "version": "0.45.0",
+  "version": "0.44.0",
   "private": true,
   "license": "MIT",
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@fluentui/react": "^0.45.0",
-    "@types/react": "16.8.11",
-    "@types/webpack-env": "1.15.1",
     "@uifabric/build": "^7.0.0",
-    "minimatch": "^3.0.4"
+    "@fluentui/react": "^0.44.0",
+    "@types/webpack-env": "1.15.1",
+    "minimatch": "^3.0.4",
+    "@types/react": "16.8.11"
   },
   "publishConfig": {
     "access": "public"
