--- a/packages/fluentui/react-context-selector/package.json
+++ b/packages/fluentui/react-context-selector/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@fluentui/react-context-selector",
   "description": "React useContextSelector & useContextSelectors hooks in userland",
-  "version": "0.45.0",
+  "version": "0.44.0",
   "author": "Oleksandr Fediashov <a@fedyashov.com>",
   "bugs": "https://github.com/OfficeDev/office-ui-fabric-react/issues",
   "dependencies": {
     "@babel/runtime": "^7.7.6"
   },
   "devDependencies": {
-    "@types/react": "16.8.11",
-    "@types/react-is": "^16.7.1",
     "@uifabric/build": "^7.0.0",
+    "@types/react-is": "^16.7.1",
     "lerna-alias": "^3.0.3-0",
     "react": "16.8.6",
-    "react-is": "^16.6.3"
+    "react-is": "^16.6.3",
+    "@types/react": "16.8.11"
   },
   "peerDependencies": {
     "react": "^16.8.0"
@@ -42,6 +42,5 @@
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
-  "private": true,
-  "gitHead": "6a1c3fb6521283edb3c905846eec7c7e5410e65e"
+  "private": true
 }
