--- a/packages/fluentui/react-proptypes/package.json
+++ b/packages/fluentui/react-proptypes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fluentui/react-proptypes",
   "description": "Set of custom reusable PropTypes for React components, some of them are specific for Fluent UI.",
-  "version": "0.45.0",
+  "version": "0.44.0",
   "author": "Oleksandr Fediashov <olfedias@microsoft.com>",
   "bugs": "https://github.com/OfficeDev/office-ui-fabric-react/issues",
   "dependencies": {
@@ -10,9 +10,9 @@
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@types/react": "16.8.11",
     "@uifabric/build": "^7.0.0",
-    "lerna-alias": "^3.0.3-0"
+    "lerna-alias": "^3.0.3-0",
+    "@types/react": "16.8.11"
   },
   "files": [
     "dist"
@@ -38,6 +38,5 @@
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
-  "private": true,
-  "gitHead": "6a1c3fb6521283edb3c905846eec7c7e5410e65e"
+  "private": true
 }
