--- a/packages/fluentui/react/package.json
+++ b/packages/fluentui/react/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@fluentui/react",
   "description": "A themable React component library.",
-  "version": "0.45.0",
+  "version": "0.44.0",
   "author": "Levi Thomason <me@levithomason.com>",
   "bugs": "https://github.com/OfficeDev/office-ui-fabric-react/issues",
   "dependencies": {
     "@babel/runtime": "^7.7.6",
-    "@fluentui/accessibility": "^0.45.0",
-    "@fluentui/react-bindings": "^0.45.0",
-    "@fluentui/react-component-event-listener": "^0.45.0",
-    "@fluentui/react-component-nesting-registry": "^0.45.0",
-    "@fluentui/react-component-ref": "^0.45.0",
-    "@fluentui/react-context-selector": "^0.45.0",
-    "@fluentui/react-proptypes": "^0.45.0",
-    "@fluentui/styles": "^0.45.0",
+    "@fluentui/accessibility": "^0.44.0",
+    "@fluentui/react-bindings": "^0.44.0",
+    "@fluentui/react-component-event-listener": "^0.44.0",
+    "@fluentui/react-component-nesting-registry": "^0.44.0",
+    "@fluentui/react-context-selector": "^0.44.0",
+    "@fluentui/react-component-ref": "^0.44.0",
+    "@fluentui/react-proptypes": "^0.44.0",
+    "@fluentui/styles": "^0.44.0",
     "classnames": "^2.2.6",
     "downshift": "3.2.14",
     "fela": "^10.6.1",
@@ -70,6 +70,5 @@
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
-  "private": true,
-  "gitHead": "6a1c3fb6521283edb3c905846eec7c7e5410e65e"
+  "private": true
 }
