Faster builds via better gulp-cache (#12111)
* faster builds via better gulp-cache

* re-enable all fully loaded on self-hosted build boxes

* parallelize the screener for FluentUI stuff

* fix job name

* optimize the number of parallelized jobs in vms

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,11 +7,14 @@ trigger:
 variables:
   - group: fabric-variables
 
+pool: 'Self Host Ubuntu'
+
 jobs:
   - job: Build
-    pool: 'Self Host Ubuntu'
     steps:
       - template: azure-pipelines.tools.yml
+
+      - template: azure-pipelines.cache.yml
 
       - script: |
           yarn
@@ -61,11 +64,12 @@ jobs:
 
   - job: Validate
     dependsOn: Build
-    pool:
-      vmImage: 'Ubuntu 18.04'
+    pool: 'Self Host Ubuntu'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
+
+      - template: azure-pipelines.cache.yml
 
       - template: azure-pipelines.artifacts.yml
         parameters:
@@ -94,11 +98,11 @@ jobs:
 
   - job: ValidateFluent
     dependsOn: Build
-    pool:
-      vmImage: 'Ubuntu 18.04'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
+
+      - template: azure-pipelines.cache.yml
 
       - template: azure-pipelines.artifacts.yml
         parameters:
@@ -141,11 +145,11 @@ jobs:
 
   - job: Deploy
     dependsOn: Build
-    pool:
-      vmImage: 'Ubuntu 18.04'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
+
+      - template: azure-pipelines.cache.yml
 
       - template: azure-pipelines.artifacts.yml
         parameters:
@@ -173,18 +177,45 @@ jobs:
           Contents: '**/*'
         condition: always()
 
-  - job: Screener
+  - job: ScreenerFluent
     dependsOn: Build
-    pool: 'Self Host Ubuntu'
     steps:
       # No need for checkout since we're using build artifacts.
       - checkout: none
 
+      - template: azure-pipelines.cache.yml
+
+      - template: azure-pipelines.artifacts.yml
+        parameters:
+          artifact: Build-PR-$(Build.BuildNumber)
+          buildId: $(Build.BuildId)
+
+      - template: azure-pipelines.tools.yml
+
+      - script: |
+          git config --global user.email "fabrictactical@microsoft.com"
+          git config --global user.name "Fabric Tactical"
+          yarn test:fluentui:visual
+        displayName: run FUI VR Test
+        env:
+          SCREENER_API_KEY: $(screener.key)
+
       - task: DeleteFiles@1
         inputs:
-          SourceFolder: /tmp/gulp-cache
+          SourceFolder: $(Build.SourcesDirectory)
           Contents: '**/*'
         condition: always()
+
+  - job: Screener
+    dependsOn: Build
+    # keeping this at microsoft hosted because this doesn't require builds
+    pool:
+      vmImage: 'Ubuntu 18.04'
+    steps:
+      # No need for checkout since we're using build artifacts.
+      - checkout: none
+
+      - template: azure-pipelines.cache.yml
 
       - template: azure-pipelines.artifacts.yml
         parameters:
@@ -198,14 +229,6 @@ jobs:
           git config --global user.name "Fabric Tactical"
           yarn vrtest -- --debug
         displayName: run VR Test
-        env:
-          SCREENER_API_KEY: $(screener.key)
-
-      - script: |
-          git config --global user.email "fabrictactical@microsoft.com"
-          git config --global user.name "Fabric Tactical"
-          yarn test:fluentui:visual
-        displayName: run FUI VR Test
         env:
           SCREENER_API_KEY: $(screener.key)
 
