--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "lint": "lerna run lint --parallel",
     "publish:beachball": "beachball publish",
     "check-for-changed-files": "cd scripts && just-scripts check-for-modified-files",
+    "perf": "cross-env PERF=true gulp perf --times=100",
+    "perf:debug": "cross-env PERF=true gulp perf:debug --debug",
     "preinstall": "node ./scripts/use-yarn-please.js",
     "prelint": "yarn satisfied && yarn syncpack list-mismatches --prod --dev",
     "postinstall": "node ./scripts/postinstall.js",
@@ -45,6 +47,8 @@
     "start:legacy": "yarn workspace @uifabric/fabric-website-resources start",
     "start": "node scripts/start.js",
     "start-exp": "yarn workspace @uifabric/experiments start",
+    "stats:build": "gulp stats",
+    "stats:save": "gulp stats:save",
     "test": "lerna run test --stream",
     "test:fluentui:circulars": "gulp test:circulars:run",
     "test:fluentui:e2e": "gulp test:e2e",
