--- a/packages/fluentui/accessibility/package.json
+++ b/packages/fluentui/accessibility/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fluentui/accessibility",
   "description": "A set of reusable framework accessibility behaviours.",
-  "version": "0.44.0",
+  "version": "0.45.0",
   "author": "Oleksandr Fediashov <olfedias@microsoft.com>",
   "bugs": "https://github.com/OfficeDev/office-ui-fabric-react/issues",
   "dependencies": {
@@ -10,9 +10,9 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "@types/react": "16.8.11",
     "@uifabric/build": "^7.0.0",
-    "lerna-alias": "^3.0.3-0",
-    "@types/react": "16.8.11"
+    "lerna-alias": "^3.0.3-0"
   },
   "files": [
     "dist"
@@ -38,5 +38,6 @@
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
-  "private": true
+  "private": true,
+  "gitHead": "d08e21664e66fd0203260f1d2f441007bca02915"
 }
