--- a/packages/fluentui/local-sandbox/package.json
+++ b/packages/fluentui/local-sandbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fluentui/local-sandbox",
-  "version": "0.44.0",
+  "version": "0.45.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -10,23 +10,24 @@
     "serve": "node ./server.js"
   },
   "dependencies": {
-    "@fluentui/react": "^0.44.0"
+    "@fluentui/react": "^0.45.0"
   },
   "devDependencies": {
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^4.5.2",
     "express": "^4.15.4",
     "fork-ts-checker-webpack-plugin": "1.3.3",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "source-map-loader": "^0.2.4",
     "terser-webpack-plugin": "^1.4.3",
     "typescript": "3.7.2",
     "webpack": "4.35.0",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "webpack-cli": "^3.3.10"
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "d08e21664e66fd0203260f1d2f441007bca02915"
 }
