--- a/packages/fluentui/react-component-nesting-registry/package.json
+++ b/packages/fluentui/react-component-nesting-registry/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fluentui/react-component-nesting-registry",
   "description": "Registers a DOM nodes within a context.",
-  "version": "0.44.0",
+  "version": "0.45.0",
   "author": "Oleksandr Fediashov <a@fedyashov.com>",
   "bugs": "https://github.com/OfficeDev/office-ui-fabric-react/issues",
   "dependencies": {
@@ -9,9 +9,9 @@
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
+    "@types/react": "16.8.11",
     "@uifabric/build": "^7.0.0",
-    "lerna-alias": "^3.0.3-0",
-    "@types/react": "16.8.11"
+    "lerna-alias": "^3.0.3-0"
   },
   "files": [
     "dist"
@@ -41,5 +41,6 @@
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
-  "private": true
+  "private": true,
+  "gitHead": "d08e21664e66fd0203260f1d2f441007bca02915"
 }
