--- a/packages/fluentui/react-component-ref/package.json
+++ b/packages/fluentui/react-component-ref/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fluentui/react-component-ref",
   "description": "A set of components and utils to deal with React refs.",
-  "version": "0.44.0",
+  "version": "0.45.0",
   "author": "Oleksandr Fediashov <olfedias@microsoft.com>",
   "bugs": "https://github.com/OfficeDev/office-ui-fabric-react/issues",
   "dependencies": {
@@ -10,10 +10,10 @@
     "react-is": "^16.6.3"
   },
   "devDependencies": {
-    "@uifabric/build": "^7.0.0",
+    "@types/react": "16.8.11",
     "@types/react-is": "^16.7.1",
-    "lerna-alias": "^3.0.3-0",
-    "@types/react": "16.8.11"
+    "@uifabric/build": "^7.0.0",
+    "lerna-alias": "^3.0.3-0"
   },
   "files": [
     "dist"
@@ -43,5 +43,6 @@
   },
   "sideEffects": false,
   "types": "dist/es/index.d.ts",
-  "private": true
+  "private": true,
+  "gitHead": "d08e21664e66fd0203260f1d2f441007bca02915"
 }
