--- a/packages/fluentui/react-theming/package.json
+++ b/packages/fluentui/react-theming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fluentui/react-theming",
-  "version": "0.44.0",
+  "version": "0.45.0",
   "description": "> TODO: description",
   "homepage": "https://github.com/OfficeDev/office-ui-fabric-react",
   "bugs": {
@@ -37,9 +37,9 @@
     "jss-preset-default": "^10.0.0"
   },
   "devDependencies": {
-    "@uifabric/build": "^7.0.0",
     "@types/jss": "^9.5.8",
     "@types/react": "16.8.11",
+    "@uifabric/build": "^7.0.0",
     "react": "16.8.6"
   },
   "peerDependencies": {
@@ -48,5 +48,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "private": true
+  "private": true,
+  "gitHead": "d08e21664e66fd0203260f1d2f441007bca02915"
 }
