chore: remove wrong "private" fields from "package.json"s (#12158)

--- a/packages/fluentui/code-sandbox/package.json
+++ b/packages/fluentui/code-sandbox/package.json
@@ -36,7 +36,5 @@
     "lint:old": "tslint -t stylish -p ."
   },
   "sideEffects": false,
-  "types": "dist/es/index.d.ts",
-  "private": true,
-  "gitHead": "d08e21664e66fd0203260f1d2f441007bca02915"
+  "types": "dist/es/index.d.ts"
 }
