--- a/packages/fluentui/ability-attributes/package.json
+++ b/packages/fluentui/ability-attributes/package.json
@@ -28,7 +28,5 @@
     "schema": "allyschema -c \"process.env.NODE_ENV !== 'production'\" schema.json > ./src/schema.ts"
   },
   "sideEffects": false,
-  "types": "dist/es/index.d.ts",
-  "private": true,
-  "gitHead": "d08e21664e66fd0203260f1d2f441007bca02915"
+  "types": "dist/es/index.d.ts"
 }
