Azure theme: Adding storybook support (#12336)
* Adding storybook to azure theme for helping Azure Portal design.

* Change files

* lint fix.

--- a/packages/azure-themes/package.json
+++ b/packages/azure-themes/package.json
@@ -19,7 +19,8 @@
     "lint": "just-scripts lint",
     "just": "just-scripts",
     "code-style": "just-scripts code-style",
-    "clean": "just-scripts clean"
+    "clean": "just-scripts clean",
+    "start": "just-scripts dev:storybook"
   },
   "devDependencies": {
     "@uifabric/build": "^7.0.0",
