feat(compose): add compose to Fluent v0 (#12239)
* feat(compose): add compose

* reset changes

* add tests

* remove any's

* use compose from react-compose, fix issues

* bump version

* revert not needed change

* Change files

* update tests to check state

* fix typings

* fix formatting

* fix formatting

* fix formatting

* update example

* remove duplicated import

* Update packages/fluentui/docs/src/examples/components/Button/Visual/ButtonExampleCompose.shorthand.tsx

Co-Authored-By: Marija Najdova <mnajdova@gmail.com>

* Update packages/fluentui/docs/src/examples/components/Button/Visual/ButtonExampleCompose.shorthand.tsx

Co-Authored-By: Marija Najdova <mnajdova@gmail.com>

* Update packages/fluentui/docs/src/examples/components/Button/Visual/ButtonExampleCompose.shorthand.tsx

Co-Authored-By: Marija Najdova <mnajdova@gmail.com>

* Update packages/fluentui/docs/src/examples/components/Button/Visual/ButtonExampleCompose.shorthand.tsx

Co-Authored-By: Marija Najdova <mnajdova@gmail.com>

* rename to useCurrentReactElement

* return an object in useCurrentReactElement

* remove cruft

* update example

* fix UTs

* fix UTs

Co-authored-by: Marija Najdova <mnajdova@gmail.com>

--- a/packages/fluentui/docs/tsconfig.json
+++ b/packages/fluentui/docs/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "esnext",
     "paths": {
       "@fluentui/*": ["packages/fluentui/*/src/index"],
+      "@fluentui/react-compose": ["packages/react-compose/src/index"],
       "docs/*": ["packages/fluentui/docs/*"],
       "src/*": ["packages/fluentui/react-northstar/src/*"],
       "test/*": ["packages/fluentui/react-northstar/test/*"]
