--- a/packages/fluentui/react-bindings/package.json
+++ b/packages/fluentui/react-bindings/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/runtime": "^7.7.6",
     "@fluentui/accessibility": "^0.47.0",
+    "@fluentui/react-compose": "^0.2.1",
     "@fluentui/state": "^0.47.0",
     "@fluentui/styles": "^0.47.0",
     "classnames": "^2.2.6",
