Rename @uifabric/react-cards to @fluentui/react-cards (#15586)

--- a/packages/react-cards/package.json
+++ b/packages/react-cards/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uifabric/react-cards",
+  "name": "@fluentui/react-cards",
   "version": "0.113.3",
   "description": "Card container components for Fluent UI React.",
   "main": "lib-commonjs/index.js",
