--- a/packages/api-docs/package.json
+++ b/packages/api-docs/package.json
@@ -38,7 +38,7 @@
     "@fluentui/theme": "^1.2.1",
     "@uifabric/date-time": "^7.17.16",
     "@uifabric/merge-styles": "^7.19.1",
-    "@uifabric/react-cards": "^0.113.3",
+    "@fluentui/react-cards": "^0.113.3",
     "@fluentui/style-utilities": "^7.16.9",
     "@uifabric/utilities": "^7.32.3",
     "@microsoft/api-extractor-model": "7.7.1",
