--- a/apps/theming-designer/package.json
+++ b/apps/theming-designer/package.json
@@ -25,7 +25,7 @@
     "@uifabric/merge-styles": "^7.19.1",
     "@uifabric/example-app-base": "^7.15.18",
     "@fluentui/foundation-legacy": "^7.9.9",
-    "@uifabric/variants": "^7.2.21",
+    "@fluentui/scheme-utilities": "^7.2.21",
     "@uifabric/set-version": "^7.0.23",
     "@uifabric/icons": "^7.5.8",
     "@microsoft/load-themed-styles": "^1.10.26",
