Update azure-pipelines.hotfix.yml for Azure Pipelines

--- a/azure-pipelines.hotfix.yml
+++ b/azure-pipelines.hotfix.yml
@@ -40,11 +40,9 @@ steps:
     displayName: 'Create tarball'
     workingDirectory: 'packages/react'
 
-  - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: oufr'
-    inputs:
-      PathtoPublish: 'packages/react/react-$(targetNpmVersion).tgz'
-      ArtifactName: oufr
+  - script: |
+      npm publish packages/react/react-$(targetNpmVersion).tgz --tag hf7 --//registry.npmjs.org/:_authToken=$(npmToken)
+    displayName: Publish new version
 
   - template: .devops/templates/cleanup.yml
     parameters:
