--- a/packages/foundation-legacy/package.json
+++ b/packages/foundation-legacy/package.json
@@ -32,7 +32,6 @@
     "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/jest": "~24.9.0",
     "@types/react": "16.8.25",
-    "@types/react-dom": "16.8.4",
     "@types/react-test-renderer": "^16.0.0",
     "@uifabric/build": "^7.0.0",
     "@uifabric/jest-serializer-merge-styles": "^7.2.2",
@@ -40,7 +39,6 @@
     "enzyme-adapter-react-16": "^1.15.0",
     "react": "16.8.6",
     "react-app-polyfill": "~1.0.1",
-    "react-dom": "16.8.6",
     "react-hooks-testing-library": "^0.5.0",
     "react-test-renderer": "^16.3.0"
   },
@@ -53,8 +51,6 @@
   },
   "peerDependencies": {
     "@types/react": ">=16.8.0 <17.0.0",
-    "@types/react-dom": ">=16.8.0 <17.0.0",
-    "react": ">=16.8.0 <17.0.0",
-    "react-dom": ">=16.8.0 <17.0.0"
+    "react": ">=16.8.0 <17.0.0"
   }
 }
