--- a/packages/react-icons-mdl2/package.json
+++ b/packages/react-icons-mdl2/package.json
@@ -31,7 +31,6 @@
     "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/jest": "~24.9.0",
     "@types/react": "16.8.25",
-    "@types/react-dom": "16.8.4",
     "@types/react-is": "^16.7.1",
     "@types/react-test-renderer": "^16.0.0",
     "@types/webpack-env": "1.15.1",
@@ -40,7 +39,6 @@
     "enzyme-adapter-react-16": "^1.15.0",
     "react": "16.8.6",
     "react-app-polyfill": "~1.0.1",
-    "react-dom": "16.8.6",
     "react-is": "^16.6.3",
     "react-test-renderer": "^16.3.0"
   },
@@ -51,8 +49,6 @@
     "tslib": "^1.10.0"
   },
   "peerDependencies": {
-    "@types/react-dom": ">=16.8.0 <17.0.0",
-    "react": ">=16.8.0 <17.0.0",
-    "react-dom": ">=16.8.0 <17.0.0"
+    "react": ">=16.8.0 <17.0.0"
   }
 }
