--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -19,10 +19,8 @@
   "devDependencies": {
     "@fluentui/eslint-plugin": "^0.54.1",
     "@types/react": "16.8.25",
-    "@types/react-dom": "16.8.4",
     "@uifabric/build": "^7.0.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react": "16.8.6"
   },
   "dependencies": {
     "@fluentui/react": "^7.142.0",
@@ -36,8 +34,6 @@
   },
   "peerDependencies": {
     "@types/react": ">=16.8.0 <17.0.0",
-    "@types/react-dom": ">=16.8.0 <17.0.0",
-    "react": ">=16.8.0 <17.0.0",
-    "react-dom": ">=16.8.0 <17.0.0"
+    "react": ">=16.8.0 <17.0.0"
   }
 }
