Update azure-pipelines.hotfix.yml for Azure Pipelines [skip ci]

--- a/azure-pipelines.hotfix.yml
+++ b/azure-pipelines.hotfix.yml
@@ -7,6 +7,8 @@ pool: 'Self Host Ubuntu'
 workspace:
   clean: all
 
+name: '$(targetNpmVersion) ($(Rev:r))'
+
 steps:
   - template: .devops/templates/tools.yml
 
