Add versioning to generate-package-manifest (master) (#15753)

--- a/azure-pipelines.release.yml
+++ b/azure-pipelines.release.yml
@@ -134,17 +134,17 @@ steps:
     displayName: 'Publish Artifact: Fabric Website Resources'
 
   - script: |
-      yarn workspace @fluentui/scripts just generate-package-manifest
+      node ./scripts/generate-package-manifest
     displayName: 'Generates a package manifest'
 
   - task: AzureUpload@2
     displayName: Upload Package Manifest
     inputs:
-      SourcePath: 'package-manifest.json'
+      SourcePath: 'package-manifest'
       azureSubscription: 'UI Fabric (private)'
       storage: fabricweb
       ContainerName: 'fabric'
-      BlobPrefix: 'package-manifest/latest'
+      BlobPrefix: 'package-manifest'
       Gzip: false
 
   - template: .devops/templates/cleanup.yml
